--- a/src/public/producto.html
+++ b/src/public/producto.html
@@ -7,119 +7,133 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="css/producto.css" />
-  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
 
-<header class="bg-white border-bottom shadow-sm sticky-top header-grande">
-  <div class="container d-flex align-items-center justify-content-between py-3">
-    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
-      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
-      <span class="fw-bold text-dark fs-4">Biddable</span>
-    </a>
-    <nav class="d-flex align-items-center gap-4">
-      <a href="productos.html" class="nav-link">Subastas</a>
-      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
-      <a href="misProductos.html" class="nav-link">Mis Productos</a>
-      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
-      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
-    </nav>
-  </div>
-</header>
-
-<nav class="container py-3">
-  <a href="index.html" class="text-decoration-none text-secondary">Inicio</a> &rsaquo;
-  <a href="productos.html" class="text-decoration-none text-secondary">Productos</a> &rsaquo;
-  <span id="titulo-breadcrumb" class="text-dark">Cargando…</span>
-</nav>
-
-<main class="container mb-5">
-  <div class="row g-5">
-    <div class="col-md-6">
-      <div class="bg-white rounded shadow-sm p-3 text-center" style="aspect-ratio: 4 / 3;">
-        <div id="imagen-principal"></div>
+  <header class="app-header">
+    <div class="app-header__inner">
+      <a href="index.html" class="app-brand">
+        <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+        Biddable
+      </a>
+      <nav class="app-nav">
+        <a href="productos.html" class="is-active">Subastas</a>
+        <a href="misPujas.html">Mis pujas</a>
+        <a href="misProductos.html">Mis productos</a>
+        <a href="mensajes.html"><i class="fas fa-envelope"></i></a>
+        <a href="miCuenta.html"><i class="fas fa-user"></i></a>
+      </nav>
+      <div class="app-header__actions">
+        <a href="crearProducto.html" class="btn btn-outline-light">Vender un artículo</a>
+        <a href="misPujas.html" class="btn btn-primary">Revisar mis pujas</a>
       </div>
-      <div id="thumbnails" class="d-flex gap-2 mt-3 overflow-auto"></div>
     </div>
+  </header>
 
-    <div class="col-md-6">
-      <div class="bg-white rounded shadow-sm p-4">
-        <h1 id="titulo" class="fs-3 fw-bold text-primary">Cargando título…</h1>
-        <p class="text-muted">N.º <span id="numero-subasta">00000000</span></p>
-        <p id="estado-subasta" class="fw-semibold text-info">Cargando estado…</p>
-
-        <div class="mt-3">
-          <p class="text-uppercase small text-muted mb-1">Puja Actual</p>
-          <h2 id="puja-actual" class="text-primary display-5">€0.00</h2>
-          <p id="precio-reserva" class="text-warning small">Precio de reserva no alcanzado</p>
+  <section class="product-hero">
+    <div class="container">
+      <div class="product-hero__breadcrumbs">
+        <a href="index.html">Inicio</a>
+        <span>/</span>
+        <a href="productos.html">Subastas</a>
+        <span>/</span>
+        <span id="titulo-breadcrumb">Cargando…</span>
+      </div>
+      <div class="product-hero__headline">
+        <div>
+          <h1 id="titulo">Cargando título…</h1>
+          <p>N.º <span id="numero-subasta">00000000</span> · <span id="estado-subasta" class="status-pill">Cargando estado…</span></p>
         </div>
-
-        <form id="form-puja" class="d-flex gap-2 align-items-center mt-4">
-          <input type="number" id="cantidad" class="form-control" placeholder="€ Tu puja" required />
-          <button type="submit" class="btn btn-primary">Pujar</button>
-          <button type="button" id="btn-max-puja" class="btn btn-outline-secondary">Máx</button>
-        </form>
-        <p id="error-puja" class="text-danger small mt-2"></p>
-
-        <div class="mt-4 small text-muted">
-          <p><i class="fas fa-shield-alt me-1"></i> Tarifa Protección: 9% + €3</p>
-          <p><i class="fas fa-truck me-1"></i> 22 € desde España – 6–8 días</p>
-        </div>
-
-        <div class="mt-4">
-          <button id="btn-contactar-vendedor" class="btn btn-outline-primary w-100">
-            <i class="fas fa-envelope me-2"></i> Contactar al vendedor
+        <div class="product-hero__cta">
+          <button id="btn-contactar-vendedor" class="btn btn-outline-light">
+            <i class="fas fa-envelope"></i> Contactar al vendedor
           </button>
         </div>
       </div>
     </div>
-  </div>
-
-  <section class="mt-5">
-    <h2 class="h5 text-primary mb-3">Pujas</h2>
-    <ul id="lista-pujas" class="list-group"></ul>
   </section>
 
-  <section class="mt-5">
-    <ul class="nav nav-tabs" id="tabs">
-      <li class="nav-item">
-        <button class="nav-link active" data-tab="descripcion">Descripción</button>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link" data-tab="reseñas">Reseñas</button>
-      </li>
-    </ul>
-    <div class="tab-content border border-top-0 p-4">
-      <div id="descripcion" class="tab-pane fade show active">
-        <p id="descripcion-texto">Cargando descripción…</p>
+  <main class="product-page container">
+    <section class="product-overview">
+      <div class="product-gallery glass-panel">
+        <div class="product-gallery__main" id="imagen-principal"></div>
+        <div id="thumbnails" class="product-gallery__thumbs"></div>
       </div>
-      <div id="reseñas" class="tab-pane fade">
-        <div id="lista-reseñas" class="mb-4"></div>
-        <form id="form-reseña">
-          <h3 class="h6 mb-3">Deja tu reseña</h3>
-          <div class="mb-3">
-            <label for="calificacion" class="form-label">Calificación</label>
-            <select id="calificacion" class="form-select" required>
-              <option value="">— Selecciona —</option>
-              <option value="1">★☆☆☆☆ (1)</option>
-              <option value="2">★★☆☆☆ (2)</option>
-              <option value="3">★★★☆☆ (3)</option>
-              <option value="4">★★★★☆ (4)</option>
-              <option value="5">★★★★★ (5)</option>
-            </select>
+      <div class="product-summary glass-panel">
+        <div class="product-summary__price">
+          <span>Puja actual</span>
+          <strong id="puja-actual">€0.00</strong>
+          <p id="precio-reserva" class="reserve-status">Precio de reserva no alcanzado</p>
+        </div>
+        <form id="form-puja" class="product-bid-form">
+          <div class="bid-input">
+            <label for="cantidad">Introduce tu puja</label>
+            <input type="number" id="cantidad" class="form-control" placeholder="€" required />
           </div>
-          <div class="mb-3">
-            <label for="comentario" class="form-label">Comentario</label>
-            <textarea id="comentario" rows="4" class="form-control" required placeholder="Tu opinión…"></textarea>
+          <div class="product-bid-form__actions">
+            <button type="submit" class="btn btn-primary">Pujar ahora</button>
+            <button type="button" id="btn-max-puja" class="btn btn-outline-primary">Máx</button>
           </div>
-          <button type="submit" class="btn btn-primary">Enviar reseña</button>
-          <p id="error-reseña" class="text-danger small mt-2"></p>
+          <p id="error-puja" class="text-danger small"></p>
         </form>
+        <div class="product-summary__info">
+          <div>
+            <i class="fas fa-shield-alt"></i>
+            <span>Protección Biddable: custodia de pago y seguro antifraude (9% + €3)</span>
+          </div>
+          <div>
+            <i class="fas fa-truck"></i>
+            <span>Envío estimado: 22 € · 6–8 días laborables</span>
+          </div>
+        </div>
       </div>
-    </div>
-  </section>
-</main>
+    </section>
+
+    <section class="product-details glass-panel">
+      <div class="product-tabs">
+        <button class="product-tab active" data-tab="descripcion">Descripción</button>
+        <button class="product-tab" data-tab="reseñas">Reseñas</button>
+        <button class="product-tab" data-tab="historial">Historial de pujas</button>
+      </div>
+      <div class="product-tab-panels">
+        <div id="descripcion" class="product-panel active">
+          <p id="descripcion-texto">Cargando descripción…</p>
+        </div>
+        <div id="reseñas" class="product-panel">
+          <div id="lista-reseñas" class="reviews-list"></div>
+          <form id="form-reseña" class="review-form">
+            <h3>Comparte tu experiencia</h3>
+            <div class="row g-3">
+              <div class="col-md-4">
+                <label for="calificacion" class="form-label">Calificación</label>
+                <select id="calificacion" class="form-select" required>
+                  <option value="">Selecciona</option>
+                  <option value="1">★☆☆☆☆ (1)</option>
+                  <option value="2">★★☆☆☆ (2)</option>
+                  <option value="3">★★★☆☆ (3)</option>
+                  <option value="4">★★★★☆ (4)</option>
+                  <option value="5">★★★★★ (5)</option>
+                </select>
+              </div>
+              <div class="col-12">
+                <label for="comentario" class="form-label">Comentario</label>
+                <textarea id="comentario" rows="4" class="form-control" required placeholder="¿Qué destacas de esta subasta?"></textarea>
+              </div>
+            </div>
+            <div class="d-flex gap-3 align-items-center">
+              <button type="submit" class="btn btn-primary">Enviar reseña</button>
+              <p id="error-reseña" class="text-danger small mb-0"></p>
+            </div>
+          </form>
+        </div>
+        <div id="historial" class="product-panel">
+          <ul id="lista-pujas" class="bids-timeline"></ul>
+        </div>
+      </div>
+    </section>
+  </main>
 
 <!-- Modal para mensaje al vendedor -->
 <div class="modal fade" id="modalMensaje" tabindex="-1" aria-labelledby="modalMensajeLabel" aria-hidden="true">
@@ -144,9 +158,43 @@
 <div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
 <script src="js/notificacion.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-<footer class="text-center py-4 text-muted border-top mt-5">
-  <small>&copy; 2025 Biddable. Todos los derechos reservados.</small>
+<footer class="app-footer">
+  <div class="app-footer__inner">
+    <div class="app-footer__brand">
+      <a href="index.html" class="app-brand">
+        <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+        Biddable
+      </a>
+      <p>Garantizamos cada transacción con autenticación, custodia de pago y soporte especializado.</p>
+    </div>
+    <div class="app-footer__cols">
+      <div class="app-footer__col">
+        <h4>Descubrir</h4>
+        <ul>
+          <li><a href="productos.html">Subastas activas</a></li>
+          <li><a href="misPujas.html">Mis pujas</a></li>
+          <li><a href="misProductos.html">Mi inventario</a></li>
+        </ul>
+      </div>
+      <div class="app-footer__col">
+        <h4>Servicios</h4>
+        <ul>
+          <li><a href="mensajes.html">Mesa de ayuda</a></li>
+          <li><a href="miCuenta.html">Preferencias de cuenta</a></li>
+          <li><a href="crearProducto.html">Publicar producto</a></li>
+        </ul>
+      </div>
+      <div class="app-footer__col">
+        <h4>Recursos</h4>
+        <ul>
+          <li><a href="#">Guía de compra segura</a></li>
+          <li><a href="#">Atención VIP</a></li>
+          <li><a href="#">Soporte 24/7</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">&copy; 2025 Biddable. Todos los derechos reservados.</div>
 </footer>
 <script src="js/producto.js"></script>
 </body>
