--- a/src/public/productos.html
+++ b/src/public/productos.html
@@ -15,84 +15,147 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
   <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="css/productos.css" />
-  <link rel="stylesheet" href="css/index.css" />
 </head>
-<body class="bg-light">
+<body>
 
-  <!-- HEADER -->
-  <header class="bg-white border-bottom shadow-sm sticky-top header-grande">
-  <div class="container d-flex align-items-center justify-content-between py-3">
-    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
-      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
-      <span class="fw-bold text-dark fs-4">Biddable</span>
-    </a>
-    <nav class="d-flex align-items-center gap-4">
-      <a href="productos.html" class="nav-link">Subastas</a>
-      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
-      <a href="misProductos.html" class="nav-link">Mis Productos</a>
-      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
-      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
-    </nav>
-  </div>
-</header>
-
-  <!-- CONTENIDO PRINCIPAL -->
-  <main class="container my-5">
-
-    <!-- FILTROS -->
-    <section class="bg-white p-4 rounded shadow-sm mb-4">
-      <h2 class="h5 text-primary mb-3">Filtrar productos</h2>
-      <form id="form-filtros" class="row g-3 align-items-end">
-        <div class="col-md-3">
-          <label for="precio-min" class="form-label">Precio mínimo (€):</label>
-          <input type="number" class="form-control" id="precio-min" name="precioMin" placeholder="0.00" min="0" step="0.01" />
-        </div>
-        <div class="col-md-3">
-          <label for="precio-max" class="form-label">Precio máximo (€):</label>
-          <input type="number" class="form-control" id="precio-max" name="precioMax" placeholder="0.00" min="0" step="0.01" />
-        </div>
-        <div class="col-md-3">
-          <label for="fecha-expiracion" class="form-label">Caduca antes de:</label>
-          <input type="date" class="form-control" id="fecha-expiracion" name="fechaExpiracion" />
-        </div>
-        <div class="col-md-3">
-          <label for="categoria" class="form-label">Categoría:</label>
-          <select class="form-select" id="categoria" name="categoria">
-            <option value="">-- Todas --</option>
-            <!-- Categorías dinámicas -->
-          </select>
-        </div>
-        <div class="col-12 d-flex gap-2 mt-3">
-          <button type="submit" class="btn btn-primary">Aplicar filtros</button>
-          <button type="button" class="btn btn-secondary" id="btn-limpiar">Limpiar</button>
-        </div>
-      </form>
-    </section>
-
-    <!-- LISTA DE PRODUCTOS -->
-    <section id="lista-productos" class="row g-4">
-      <!-- Se insertan tarjetas dinámicamente -->
-    </section>
-
-    <!-- MENSAJE SIN PRODUCTOS -->
-    <div id="sin-productos" class="alert alert-info text-center mt-4 d-none">
-      No se encontraron productos que coincidan con los filtros.
+  <header class="app-header">
+    <div class="app-header__inner">
+      <a href="index.html" class="app-brand">
+        <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+        Biddable
+      </a>
+      <nav class="app-nav">
+        <a href="productos.html" class="is-active">Subastas</a>
+        <a href="misPujas.html">Mis pujas</a>
+        <a href="misProductos.html">Mis productos</a>
+        <a href="mensajes.html"><i class="fas fa-envelope"></i></a>
+        <a href="miCuenta.html"><i class="fas fa-user"></i></a>
+      </nav>
+      <div class="app-header__actions">
+        <a href="crearProducto.html" class="btn btn-outline-light">Vender un artículo</a>
+        <a href="misPujas.html" class="btn btn-primary">Ver mis pujas</a>
+      </div>
     </div>
-  </main>
-<!-- Contenedor para notificaciones -->
-<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
-<script src="js/notificacion.js"></script>
+  </header>
 
-  <!-- FOOTER -->
-  <footer class="bg-white border-top py-4 text-center text-muted">
-    <p class="mb-0">&copy; 2025 Tienda de Subastas. Todos los derechos reservados.</p>
+  <main class="products-page">
+    <section class="products-hero">
+      <div class="container">
+        <div class="products-hero__layout">
+          <div>
+            <span class="badge-premium"><i class="fas fa-chart-line"></i> Inventario actualizado cada hora</span>
+            <h1>Subastas disponibles</h1>
+            <p>Explora lotes curados por especialistas, con historiales de pujas transparentes y garantía de autenticidad.</p>
+          </div>
+          <a href="mensajes.html" class="btn btn-outline-light">Solicitar asesoría personalizada</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="products-layout container">
+      <aside class="filters-panel glass-panel">
+        <div class="filters-panel__header">
+          <h2>Filtrar subastas</h2>
+          <p>Define un rango de inversión y descubre oportunidades a tu medida.</p>
+        </div>
+        <form id="form-filtros" class="filters-grid">
+          <label class="filter-field">
+            <span>Precio mínimo (€)</span>
+            <input type="number" id="precio-min" name="precioMin" min="0" step="0.01" placeholder="0.00" class="form-control" />
+          </label>
+          <label class="filter-field">
+            <span>Precio máximo (€)</span>
+            <input type="number" id="precio-max" name="precioMax" min="0" step="0.01" placeholder="2.500,00" class="form-control" />
+          </label>
+          <label class="filter-field">
+            <span>Caduca antes de</span>
+            <input type="date" id="fecha-expiracion" name="fechaExpiracion" class="form-control" />
+          </label>
+          <label class="filter-field">
+            <span>Categoría</span>
+            <select id="categoria" name="categoria" class="form-select">
+              <option value="">Todas las categorías</option>
+            </select>
+          </label>
+          <div class="filters-actions">
+            <button type="submit" class="btn btn-primary">Aplicar filtros</button>
+            <button type="button" class="btn btn-outline-primary" id="btn-limpiar">Limpiar todo</button>
+          </div>
+        </form>
+        <div class="filters-footnote">
+          <i class="fas fa-bell"></i>
+          <span>Crea alertas para recibir notificaciones cuando aparezcan nuevos lotes en tu rango.</span>
+        </div>
+      </aside>
+
+      <section class="results-panel">
+        <div class="section-heading">
+          <div>
+            <h2 class="section-heading__title">Resultados</h2>
+            <p class="section-heading__subtitle">Ordenados por relevancia y actividad reciente de pujas.</p>
+          </div>
+          <div class="results-badge">
+            <i class="fas fa-bolt"></i> Actualización en tiempo real
+          </div>
+        </div>
+        <div id="lista-productos" class="product-grid">
+          <!-- Productos dinámicos -->
+        </div>
+        <div id="sin-productos" class="empty-state d-none">
+          <i class="fas fa-search"></i>
+          <h3>Sin resultados con estos filtros</h3>
+          <p>Amplía el rango de precios o selecciona otra categoría para descubrir más oportunidades.</p>
+        </div>
+      </section>
+    </section>
+  </main>
+
+  <footer class="app-footer">
+    <div class="app-footer__inner">
+      <div class="app-footer__brand">
+        <a href="index.html" class="app-brand">
+          <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+          Biddable
+        </a>
+        <p>El ecosistema de subastas que conecta vendedores profesionales con compradores exigentes.</p>
+      </div>
+      <div class="app-footer__cols">
+        <div class="app-footer__col">
+          <h4>Descubrir</h4>
+          <ul>
+            <li><a href="productos.html">Subastas en vivo</a></li>
+            <li><a href="misPujas.html">Historial de pujas</a></li>
+            <li><a href="misProductos.html">Mis lotes</a></li>
+          </ul>
+        </div>
+        <div class="app-footer__col">
+          <h4>Servicios</h4>
+          <ul>
+            <li><a href="mensajes.html">Mesa de ayuda</a></li>
+            <li><a href="miCuenta.html">Gestión de cuenta</a></li>
+            <li><a href="crearProducto.html">Publicar un producto</a></li>
+          </ul>
+        </div>
+        <div class="app-footer__col">
+          <h4>Recursos</h4>
+          <ul>
+            <li><a href="#">Guía para vendedores</a></li>
+            <li><a href="#">Guía para compradores</a></li>
+            <li><a href="#">Preguntas frecuentes</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">&copy; 2025 Biddable. Todos los derechos reservados.</div>
   </footer>
 
-  <!-- Bootstrap JS -->
+  <div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+  <script src="js/notificacion.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Script específico -->
   <script src="js/productos.js"></script>
 </body>
 </html>
