--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,88 +9,221 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/theme.css" />
   <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
+  <header class="app-header">
+    <div class="app-header__inner">
+      <a href="index.html" class="app-brand">
+        <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+        Biddable
+      </a>
+      <nav class="app-nav">
+        <a href="productos.html" class="is-active">Subastas</a>
+        <a href="misPujas.html">Mis pujas</a>
+        <a href="misProductos.html">Mis productos</a>
+        <a href="mensajes.html"><i class="fas fa-envelope"></i></a>
+        <a href="miCuenta.html"><i class="fas fa-user"></i></a>
+      </nav>
+      <div class="app-header__actions">
+        <a href="crearProducto.html" class="btn btn-outline-light">Vender un artículo</a>
+        <a href="productos.html" class="btn btn-primary">Explorar subastas</a>
+      </div>
+    </div>
+  </header>
 
-  <!-- HEADER MODIFICADO -->
-<header class="bg-white border-bottom shadow-sm sticky-top header-grande">
-  <div class="container d-flex align-items-center justify-content-between py-3">
-    <a href="index.html" class="d-flex align-items-center gap-3 text-decoration-none">
-      <img src="uploads/logo-removebg-preview.png" alt="Logo" height="60" />
-      <span class="fw-bold text-dark fs-4">Biddable</span>
-    </a>
-    <nav class="d-flex align-items-center gap-4">
-      <a href="productos.html" class="nav-link">Subastas</a>
-      <a href="misPujas.html" class="nav-link">Mis Pujas</a>
-      <a href="misProductos.html" class="nav-link">Mis Productos</a>
-      <a href="mensajes.html" class="text-dark"><i class="fas fa-envelope fs-5"></i></a>
-      <a href="miCuenta.html" class="text-dark"><i class="fas fa-user fs-5"></i></a>
-    </nav>
-  </div>
-</header>
-
-<!-- HERO MODIFICADO -->
-<section class="hero text-center py-5">
-  <div class="container hero-ancho">
-    <h1 class="fw-bold mb-3">Encuentra el producto perfecto, al mejor precio</h1>
-    <p class="text-light mb-4">Compra y vende en nuestra comunidad de subastas seguras, sin comisiones ocultas.</p>
-    <a href="productos.html" class="btn btn-primary px-4">Explorar Subastas</a>
-  </div>
-</section>
-
-  <!-- SUBASTAS ACTIVAS -->
-  <section class="container my-5">
-    <h2 class="mb-4 fw-semibold">Subastas activas</h2>
-    <div class="row g-4">
-      <!-- Producto 1 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="uploads/gafasvr.jpg" class="card-img-top" alt="Producto" />
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Gafas VR Meta Quest</h5>
-            <p class="text-muted">Este producto ha sido pujado muchas veces últimamente</p>
-            <p class="fw-semibold mb-2">Última puja: 650€</p>
-            <a href="producto.html?id=684ae522dd8f80b10f4de175" class="btn btn-outline-dark w-100">Pujar</a>
+  <main>
+    <section class="home-hero">
+      <div class="container">
+        <div class="home-hero__grid">
+          <div class="home-hero__content">
+            <span class="badge-premium"><i class="fas fa-shield-alt"></i> Subastas verificadas 24/7</span>
+            <h1>Descubre piezas únicas con la confianza de un marketplace de primer nivel.</h1>
+            <p>Conecta con coleccionistas y vendedores profesionales, recibe alertas en tiempo real y asegura las mejores oportunidades antes que nadie.</p>
+            <div class="home-hero__actions">
+              <a href="productos.html" class="btn btn-primary">Ver subastas activas</a>
+              <a href="misPujas.html" class="btn btn-outline-light">Revisar mis pujas</a>
+            </div>
+            <div class="home-hero__stats">
+              <div class="hero-stat">
+                <span>4.9/5</span>
+                <p>Experiencia valorada por compradores verificados</p>
+              </div>
+              <div class="hero-stat">
+                <span>12K+</span>
+                <p>Subastas premium cerradas en los últimos 12 meses</p>
+              </div>
+              <div class="hero-stat">
+                <span>&lt;2h</span>
+                <p>Tiempo medio de respuesta de vendedores certificados</p>
+              </div>
+            </div>
+          </div>
+          <div class="home-hero__visual">
+            <div class="hero-showcase">
+              <img src="uploads/gafasvr.jpg" alt="Gafas VR Meta Quest" class="hero-showcase__image" />
+              <div class="hero-showcase__badge">Última puja: 650€</div>
+              <div class="hero-showcase__details">
+                <h3>Meta Quest Pro</h3>
+                <p>Finaliza en 03:12:45</p>
+                <a href="producto.html?id=684ae522dd8f80b10f4de175" class="btn btn-outline-light">Pujar ahora</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <!-- Producto 2 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="uploads/nike.jpg" class="card-img-top" alt="Producto" />
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Zapatillas Nike Air Jordan</h5>
-            <p class="text-muted">Este producto ha sido pujado muchas veces últimamente</p>
-            <p class="fw-semibold mb-2">Última puja: 1500€</p>
-            <a href="producto.html?id=684ae624dd8f80b10f4de181" class="btn btn-outline-dark w-100">Pujar</a>
+    </section>
+
+    <section class="home-showcase">
+      <div class="container">
+        <div class="section-heading">
+          <div>
+            <h2 class="section-heading__title">Subastas destacadas</h2>
+            <p class="section-heading__subtitle">Seleccionadas por nuestros expertos para asegurar autenticidad, trazabilidad y una experiencia de puja excepcional.</p>
+          </div>
+          <a href="productos.html" class="btn btn-outline-primary">Ver catálogo completo</a>
+        </div>
+        <div class="auction-grid">
+          <article class="auction-card">
+            <div class="auction-card__media">
+              <img src="uploads/gafasvr.jpg" alt="Gafas VR Meta Quest" />
+              <span class="auction-card__tag">Tecnología de élite</span>
+            </div>
+            <div class="auction-card__body">
+              <h3>Meta Quest Pro</h3>
+              <p>Estado impecable, con accesorios originales y garantía extendida.</p>
+              <div class="auction-card__meta">
+                <span><i class="fas fa-gavel"></i> 18 pujas activas</span>
+                <span><i class="fas fa-clock"></i> Finaliza en 3h</span>
+              </div>
+              <a href="producto.html?id=684ae522dd8f80b10f4de175" class="btn btn-primary w-100">Pujar desde 650€</a>
+            </div>
+          </article>
+          <article class="auction-card">
+            <div class="auction-card__media">
+              <img src="uploads/nike.jpg" alt="Zapatillas Nike Air Jordan" />
+              <span class="auction-card__tag">Edición limitada</span>
+            </div>
+            <div class="auction-card__body">
+              <h3>Nike Air Jordan Retro</h3>
+              <p>Lanzamiento 2024 “Reverse Mocha” con certificado de autenticidad.</p>
+              <div class="auction-card__meta">
+                <span><i class="fas fa-gavel"></i> 32 pujas activas</span>
+                <span><i class="fas fa-clock"></i> Finaliza en 7h</span>
+              </div>
+              <a href="producto.html?id=684ae624dd8f80b10f4de181" class="btn btn-primary w-100">Última puja 1.500€</a>
+            </div>
+          </article>
+          <article class="auction-card">
+            <div class="auction-card__media">
+              <img src="uploads/apple.jpg" alt="Apple Watch Series 8" />
+              <span class="auction-card__tag">Garantía oficial</span>
+            </div>
+            <div class="auction-card__body">
+              <h3>Apple Watch Series 8</h3>
+              <p>Sello precintado, envío express y asistencia de configuración premium.</p>
+              <div class="auction-card__meta">
+                <span><i class="fas fa-gavel"></i> 11 pujas activas</span>
+                <span><i class="fas fa-clock"></i> Finaliza en 12h</span>
+              </div>
+              <a href="producto.html?id=684ae76fdd8f80b10f4de19f" class="btn btn-primary w-100">Oferta vigente 250€</a>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="home-benefits">
+      <div class="container">
+        <div class="section-heading">
+          <div>
+            <h2 class="section-heading__title">La experiencia Biddable</h2>
+            <p class="section-heading__subtitle">Tecnología financiera, verificación documental y soporte humano para que cada transacción sea impecable.</p>
+          </div>
+        </div>
+        <div class="benefits-grid">
+          <article class="benefit-card">
+            <i class="fas fa-fingerprint"></i>
+            <h4>Identidad verificada</h4>
+            <p>Todos los vendedores pasan auditorías de autenticidad y reputación antes de publicar.</p>
+          </article>
+          <article class="benefit-card">
+            <i class="fas fa-bolt"></i>
+            <h4>Alertas inteligentes</h4>
+            <p>Configura alertas de precio máximo y recibe notificaciones en tiempo real.</p>
+          </article>
+          <article class="benefit-card">
+            <i class="fas fa-headset"></i>
+            <h4>Concierge dedicado</h4>
+            <p>Especialistas acompañan negociaciones de alto valor y gestionan la logística.</p>
+          </article>
+          <article class="benefit-card">
+            <i class="fas fa-shield-check"></i>
+            <h4>Protección total</h4>
+            <p>Cobertura antifraude, custodia de pagos y seguimiento hasta la entrega.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="home-cta">
+      <div class="container">
+        <div class="home-cta__panel">
+          <div>
+            <h2>Convierte tus activos en liquidez inmediata.</h2>
+            <p>Publica en minutos, recibe asesoría de precio y llega a una audiencia global de compradores.</p>
+          </div>
+          <div class="home-cta__actions">
+            <a href="crearProducto.html" class="btn btn-primary">Publicar mi primer lote</a>
+            <a href="mensajes.html" class="btn btn-outline-primary">Hablar con un especialista</a>
           </div>
         </div>
       </div>
-      <!-- Producto 3 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="uploads/apple.jpg" class="card-img-top" alt="Producto" />
-          <div class="card-body">
-            <h5 class="card-title fw-bold">Apple Watch Series 8</h5>
-            <p class="text-muted">Este producto ha sido pujado muchas veces últimamente</p>
-            <p class="fw-semibold mb-2">Última puja: 250€</p>
-            <a href="producto.html?id=684ae76fdd8f80b10f4de19f" class="btn btn-outline-dark w-100">Pujar</a>
-          </div>
+    </section>
+  </main>
+
+  <footer class="app-footer">
+    <div class="app-footer__inner">
+      <div class="app-footer__brand">
+        <a href="index.html" class="app-brand">
+          <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+          Biddable
+        </a>
+        <p>Marketplace de subastas premium con servicio concierge, verificación documental y pagos garantizados.</p>
+      </div>
+      <div class="app-footer__cols">
+        <div class="app-footer__col">
+          <h4>Explorar</h4>
+          <ul>
+            <li><a href="productos.html">Subastas activas</a></li>
+            <li><a href="misPujas.html">Mis pujas</a></li>
+            <li><a href="misProductos.html">Mi inventario</a></li>
+          </ul>
+        </div>
+        <div class="app-footer__col">
+          <h4>Soporte</h4>
+          <ul>
+            <li><a href="mensajes.html">Centro de mensajes</a></li>
+            <li><a href="miCuenta.html">Preferencias de cuenta</a></li>
+            <li><a href="registro.html">Unirme a Biddable</a></li>
+          </ul>
+        </div>
+        <div class="app-footer__col">
+          <h4>Legal</h4>
+          <ul>
+            <li><a href="#">Términos de uso</a></li>
+            <li><a href="#">Política de privacidad</a></li>
+            <li><a href="#">Centro de confianza</a></li>
+          </ul>
         </div>
       </div>
     </div>
-  </section>
-<!-- Contenedor para notificaciones -->
-<div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
-<script src="js/notificacion.js"></script>
-
-  <!-- FOOTER -->
-  <footer class="text-center py-4 text-muted border-top">
-    <small>&copy; 2025 Biddable. Todos los derechos reservados.</small>
+    <div class="footer-bottom">&copy; 2025 Biddable. Todos los derechos reservados.</div>
   </footer>
 
-  <!-- Bootstrap JS -->
+  <div id="notificacion-container" class="toast-container position-fixed bottom-0 end-0 p-3" style="z-index: 1100;"></div>
+  <script src="js/notificacion.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
