--- a/src/public/login.html
+++ b/src/public/login.html
@@ -9,34 +9,44 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/theme.css">
   <link rel="stylesheet" href="css/login.css">
 </head>
-<body>
+<body class="auth-body">
 
-  <div class="login-container d-flex align-items-center justify-content-center">
-    <div class="login-box shadow">
-      <div class="text-center mb-4">
-        <img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" height="60">
-        <h2 class="mt-3 fw-bold">Bienvenido de nuevo</h2>
-        <p class="text-muted">Inicia sesión para acceder a tu cuenta</p>
-      </div>
-      <form id="form-login">
-        <div class="mb-3 input-icon">
-          <i class="fas fa-user"></i>
-          <input type="text" id="usuario" class="form-control" placeholder="Usuario" required>
+  <div class="auth-shell">
+    <div class="auth-visual">
+      <div class="auth-visual__badge">Acceso seguro · 2FA habilitado</div>
+      <h1>Gestiona tus subastas desde un panel premium.</h1>
+      <p>Controla tus pujas en tiempo real, recibe alertas inteligentes y conversa con vendedores certificados desde un único lugar.</p>
+    </div>
+    <div class="auth-card">
+      <a href="index.html" class="auth-brand">
+        <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+        <span>Biddable</span>
+      </a>
+      <h2>Bienvenido de nuevo</h2>
+      <p>Inicia sesión para retomar tus operaciones.</p>
+      <form id="form-login" class="auth-form">
+        <label class="auth-field">
+          <span><i class="fas fa-user"></i> Usuario</span>
+          <input type="text" id="usuario" class="form-control" placeholder="ej. maria.gomez" required>
+        </label>
+        <label class="auth-field">
+          <span><i class="fas fa-lock"></i> Contraseña</span>
+          <input type="password" id="contrasena" class="form-control" placeholder="Introduce tu contraseña" required>
+        </label>
+        <div class="auth-actions">
+          <button type="submit" class="btn btn-primary">Acceder a mi cuenta</button>
+          <a href="registro.html" class="btn btn-outline-primary">Crear una cuenta</a>
         </div>
-        <div class="mb-4 input-icon">
-          <i class="fas fa-lock"></i>
-          <input type="password" id="contrasena" class="form-control" placeholder="Contraseña" required>
-        </div>
-        <div class="d-grid gap-2 mb-3">
-          <button type="submit" class="btn btn-primary">Iniciar sesión</button>
-          <button type="button" class="btn btn-outline-secondary">Cancelar</button>
-        </div>
-        <div class="text-center mt-3 small">
-          <a href="registro.html">¿No tienes cuenta?</a> · <a href="#">¿Olvidaste tu contraseña?</a>
+        <div class="auth-links">
+          <a href="#">¿Olvidaste tu contraseña?</a>
         </div>
       </form>
+      <div class="auth-meta">
+        <p>Acceso cifrado. Tus datos están protegidos por estándares bancarios.</p>
+      </div>
     </div>
   </div>
 <!-- Contenedor para notificaciones -->
