--- a/src/public/registro.html
+++ b/src/public/registro.html
@@ -9,46 +9,53 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/theme.css">
   <link rel="stylesheet" href="css/login.css">
 </head>
-<body>
+<body class="auth-body">
 
-  <div class="login-container d-flex align-items-center justify-content-center">
-    <div class="login-box shadow">
-      <div class="text-center mb-4">
-        <img src="uploads/logo-removebg-preview.png" alt="Logo Biddable" height="60">
-        <h2 class="mt-3 fw-bold">Crear cuenta</h2>
-        <p class="text-muted">Regístrate para comenzar a usar Biddable</p>
-      </div>
-      <form id="form-registro">
-        <div class="mb-3 input-icon">
-          <i class="fas fa-user"></i>
-          <input type="text" id="username" class="form-control" placeholder="Nombre de usuario" required>
-        </div>
-        <div class="mb-3 input-icon">
-          <i class="fas fa-envelope"></i>
-          <input type="email" id="email" class="form-control" placeholder="Correo electrónico" required>
-        </div>
-        <div class="mb-4 input-icon">
-          <i class="fas fa-lock"></i>
-          <input type="password" id="password" class="form-control" placeholder="Contraseña" required>
-        </div>
-        <div class="mb-3 input-icon">
-        <i class="fas fa-user-tag"></i>
-        <select id="rol" class="form-control" required>
+  <div class="auth-shell">
+    <div class="auth-visual auth-visual--register">
+      <div class="auth-visual__badge">Onboarding premium</div>
+      <h1>Únete a la red de subastas más exclusiva.</h1>
+      <p>Vende y compra con verificación documental, acuerdos protegidos y especialistas que te acompañan en cada paso.</p>
+    </div>
+    <div class="auth-card">
+      <a href="index.html" class="auth-brand">
+        <img src="uploads/logo-removebg-preview.png" alt="Biddable" />
+        <span>Biddable</span>
+      </a>
+      <h2>Crea tu cuenta profesional</h2>
+      <p>Completa los datos para acceder al panel y publicar tus primeros lotes.</p>
+      <form id="form-registro" class="auth-form">
+        <label class="auth-field">
+          <span><i class="fas fa-user"></i> Nombre de usuario</span>
+          <input type="text" id="username" class="form-control" placeholder="ej. sofia.aranda" required>
+        </label>
+        <label class="auth-field">
+          <span><i class="fas fa-envelope"></i> Correo electrónico</span>
+          <input type="email" id="email" class="form-control" placeholder="name@empresa.com" required>
+        </label>
+        <label class="auth-field">
+          <span><i class="fas fa-lock"></i> Contraseña</span>
+          <input type="password" id="password" class="form-control" placeholder="Mínimo 8 caracteres" required>
+        </label>
+        <label class="auth-field">
+          <span><i class="fas fa-user-tag"></i> Rol</span>
+          <select id="rol" class="form-select" required>
             <option value="" disabled selected>Selecciona un rol</option>
             <option value="usuario">Usuario</option>
             <option value="admin">Administrador</option>
-        </select>
-        </div>
-        <div class="d-grid gap-2 mb-3">
-          <button type="submit" class="btn btn-primary">Registrarse</button>
-          <button type="button" class="btn btn-outline-secondary" onclick="window.location.href='login.html'">Cancelar</button>
-        </div>
-        <div class="text-center mt-3 small">
-          ¿Ya tienes cuenta? <a href="login.html">Inicia sesión</a>
+          </select>
+        </label>
+        <div class="auth-actions">
+          <button type="submit" class="btn btn-primary">Crear mi cuenta</button>
+          <a href="login.html" class="btn btn-outline-primary">Ya tengo cuenta</a>
         </div>
       </form>
+      <div class="auth-meta">
+        <p>Revisamos cada alta para garantizar la seguridad de la comunidad.</p>
+      </div>
     </div>
   </div>
 <!-- Contenedor para notificaciones -->
